--- a/src/components/WorkTime/workTime.css
+++ b/src/components/WorkTime/workTime.css
@@ -6,4 +6,6 @@
   text-align: center;
   padding: 10px;
   border-radius: 5px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
