--- a/src/components/WorkTime/workTime.css
+++ b/src/components/WorkTime/workTime.css
@@ -2,7 +2,7 @@
   background: #00000025;
   color: #000000;
   line-height: 40px;
-  max-width: 200;
+  max-width: 200px;
   text-align: center;
   padding: 10px;
   border-radius: 5px;
