--- a/src/components/WorkTime/workTime.css
+++ b/src/components/WorkTime/workTime.css
@@ -9,3 +9,9 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+@media screen and (max-width: 400px) {
+  .work-time {
+    font-size: 1em;
+  }
+}
